# report-smith

./: .env.example  .gitignore  AGENTIC_SCHEMA_MAPPER_DESIGN.md  ANALYSIS_SUMMARY.md  AUTO_FILTER_IMPLEMENTATION.md  CACHING_IMPLEMENTATION.md  CACHING_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  COMMIT_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT.md  DIMENSION_TABLES_PATTERN.md  EMBEDDING_COMPLETE.md  EMBEDDING_FILTER_SUMMARY.md  EMBEDDING_IMPROVEMENTS.md  ENRICHMENT_REFACTOR.md  FINAL_SUMMARY.md  GEMINI_INTEGRATION_COMPLETE.md  GEMINI_SETUP.md  HYBRID_INTENT_ANALYZER.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTENT_ANALYZER_COMPARISON.md  ISSUES_TO_FIX.md  LLM_INTENT_ANALYZER.md  LLM_LOGGING_GUIDE.md  Makefile  NEXT_STEPS.md  ONBOARDING_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_IMPLEMENTATION.md  PHASE_1_1_COMPLETE.md  PHASE_1_1_HYBRID_COMPLETE.md  (+36 more)
.github/: copilot-instructions.md
config/: README.md  entity_mappings.yaml  entity_mappings.yaml.broken  logging.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CACHING.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CROSS_APPLICATION_DATA_EXTRACTION_ANALYSIS.md  CURRENT_STATE.md  DATABASE_SCHEMA.md  DIMENSION_REFACTORING_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DOMAIN_VALUES.md  DOMAIN_VALUE_LLM_IMPLEMENTATION.md  DOMAIN_VALUE_MATCHING_STRATEGY.md  EMBEDDING_CACHING.md  EMBEDDING_IMPLEMENTATION_SUMMARY.md  EMBEDDING_STRATEGY.md  ENTITY_REFINEMENT.md  EXTRACTION_ENHANCER.md  FINANCIALTESTDB_INTEGRATION.md  HLD.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_GRAPH_SUCCESS.md  LATENCY_IMPROVEMENTS.md  LATENCY_QUICK_WINS.md  LATENCY_SUMMARY.md  LLD.md  ONBOARDING_GUIDE.md  ONBOARDING_TECHNICAL_FLOW.md  ORCHESTRATOR_WORKFLOW.md  QUERY_EXAMPLE_SUCCESS.md  QUERY_EXECUTION_FLOW.md  QUERY_FLOW_DIAGRAM.txt  QUERY_ORCHESTRATOR.md  README.md  SCRIPTS.md  SEMANTIC_SEARCH_REFACTORING.md  (+4 more)
examples/: README.md  (+21 more)
(+148 files in other folders)
